--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -350,6 +350,7 @@ ko:
                 status: 매입상태
                 will_be_paied_at: 결제예정일
             contact:
+                name: 이름
                 firstname: 이름
                 lastname: 성
                 company: 회사
