fix vacation form

--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -688,6 +688,7 @@ ko:
             title: 인사정보 수정
         error:
             juminno_invalid: "는 '111111-1111111' 형식으로 써 주세요."
+        title: 인사정보관리
     main:
         index:
             human_resources: 인사관리
@@ -866,6 +867,7 @@ ko:
             empty: 연차 내역이 없습니다
         show:
             link: 연차 관리
+            info: "할당 연차: %{total}일, 사용 연차: %{used}일, 잔여 연차: %{remain}일"
         new:
             title: 새로운 연차 할당하기
             link: 연차 할당
