--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -695,6 +695,7 @@ ko:
             project: 프로젝트
             document: 문서관리
             business_client: 거래처관리
+            admin: 관리자 메뉴
     namecards:
         edit:
             title: 명함 정보 수정
