fix locale missing

--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -505,6 +505,7 @@ ko:
         edit:
             title: 거래처 수정
             picture: 사업자등록증
+        title: 거래처 관리
     card_approved_sources:
         index:
             title: 카드별 승인내역
