--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -137,7 +137,7 @@ ko:
                 file: 파일
                 filepath: 저장된 파일명
                 original_filename: 원 파일명
-                owner_table_name: 관계된 테이블명
+                owner_type: 관계된 테이블명
                 owner_id : 관계된 테이블 ID
                 title: 제목
             bonus:
