--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -867,6 +867,7 @@ ko:
         edit:
             title: 연차 수정하기
         title: 연차 신청
+        period_help: "* 반차의 경우 0.5 단위로 입력 합니다."
     users:
         new:
             title: 새 사용자 계정 만들기
