--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -868,6 +868,8 @@ ko:
             title: 연차 수정하기
         title: 연차 신청
         period_help: "* 반차의 경우 0.5 단위로 입력 합니다."
+        approval_completed: 승인 완료
+        approval_waiting : 승인 대기
     users:
         new:
             title: 새 사용자 계정 만들기
