--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -814,6 +814,7 @@ ko:
             confirm_complete: 프로젝트를 종료하시겠습니까?
         assign:
             title: 할당 비율 조정
+            not_hundred: 할당 비율이 100%가 아닙니다
     required_tags:
         index:
             title: 필수 태그 목록
