--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -109,12 +109,12 @@ ko:
             change_history: 변경사항
             commute: 출퇴근
             contact: 주소록
-            contact_email: 이메일
             contact_phone_number: 전화번호
             contact_address: 주소
+            contact_address_tag: 주소 대상
+            contact_email: 이메일
             contact_email_tag: 이메일 대상
             contact_phone_number_tag: 전화번호 대상
-            contact_address_tag: 주소 대상
             creditcard: 신용카드
             document: 문서
             hrinfo: 인사정보
@@ -414,6 +414,10 @@ ko:
                 not_a_number: "은(는) 반드시 숫자여야 합니다."
                 taken: 은(는) 이미 사용중입니다.
             models:
+                contact_email:
+                    attributes:
+                        email:
+                            invalid: 이메일 포맷 형식이 잘못되었습니다.
                 required_tag:
                     attributes:
                         modelname:
