--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -394,6 +394,12 @@ ko:
                 started_at: 시작일
                 income: 총 연봉 금액
                 basic_pay: 기본급
+            report:
+                status: 상태
+                localized_status:
+                    not_reported: 결제 대기 중
+                    reporting: 결제 진행 중
+                    reported: 결제 완료
             bonus:
                 gave_at: 지급일
                 amount: 금액
