apply expense report #8591

--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -120,6 +120,7 @@ ko:
             contact_other_tag: 기타 대상
             creditcard: 신용카드
             document: 문서
+            expense_report: 지출 내역서
             holiday: 휴일관리
             hrinfo: 인사정보
             namecard: 명함정보
@@ -310,6 +311,12 @@ ko:
                 project: 프로젝트
                 owner: 소유자
                 tags: 태그목록
+            expense_report:
+                owner: 작성자
+                target: 지출 대상
+                project: 프로젝트
+                description: 내역
+                amount: 금액
             holiday:
                 theday: 휴일날짜
                 dayname: 휴일명목
@@ -735,6 +742,9 @@ ko:
             title: 문서 정보 수정
             adduser: 사용자 추가
             addtag: 태그 추가
+    expense_reports:
+        index:
+            title: 지출내역서
     hrinfos:
         index:
             title: 인사정보관리 - 사원목록
