--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -313,8 +313,10 @@ ko:
                 tags: 태그목록
             expense_report:
                 owner: 작성자
+                hrinfo_id: 작성자
                 target: 지출 대상
                 project: 프로젝트
+                project_id: 프로젝트
                 description: 내역
                 amount: 금액
             holiday:
@@ -743,8 +745,9 @@ ko:
             adduser: 사용자 추가
             addtag: 태그 추가
     expense_reports:
+        title: 지출내역서
         index:
-            title: 지출내역서
+            title: 지출내역서 관리
     hrinfos:
         index:
             title: 인사정보관리 - 사원목록
