--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -119,6 +119,7 @@ ko:
             contact_other: 기타
             contact_other_tag: 기타 대상
             creditcard: 신용카드
+            dayworker: 사업소득원천징수 징수자
             document: 문서
             expense_report: 지출 내역서
             holiday: 휴일관리
@@ -308,6 +309,8 @@ ko:
                 issuer: 발급사
                 cardholder: 소유자이름
                 total: 총 사용금액
+            dayworker:
+                juminno: 주민등록번호
             document:
                 title: 문서제목
                 project: 프로젝트
@@ -663,6 +666,7 @@ ko:
             total: 총합
             excel: 엑셀 파일 올리기
             upload: 업로드하기
+            update: 수정
         link:
             show: 내용 보기
             logout: "로그아웃"
@@ -737,6 +741,12 @@ ko:
             type: 내역명
             file: 엑셀 파일
             submit: 엑셀 파일 올리기
+    dayworkers:
+        title: 사업소득원천징수 징수자 관리
+        new:
+            submit: 생성
+        edit:
+            submit: 수정
     documents:
         index:
             title: "문서 관리"
