--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -601,7 +601,9 @@ ko:
             link: 승인내역 올리기
         edit:
             title: 승인내역 수정하기
-        generate_cardbill:
+        find_empty_cardbills:
+            link: 카드영수증이 없는 목록 보기
+        generate_cardbills:
             link: 신용카드 영수증 생성
         title: 카드승인내역
     card_used_sources:
