--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -373,11 +373,11 @@ ko:
                 basic_pay: 기본급
             payment:
                 join_at: 입사일
-                pay_at: 지급일
                 note: 내역
                 amount: 금액
+                pay_at: 지급일
                 pay_start: 지급 시작일
-                pay_end: 지금 종료일
+                pay_finish: 지금 종료일
                 total: 총액
                 after: "%{month}개월 후"
             pettycash:
