--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -269,6 +269,10 @@ ko:
             commute:
                 go: 출근
                 leave: 퇴근
+            company:
+                name: 회사명
+                pay_basic_date: 급여 기준일
+                payday: 급여 지급일
             contact:
                 name: 이름
                 firstname: 이름
@@ -734,6 +738,8 @@ ko:
         leave:
             link: 퇴근기록 생성
             title: 출퇴근 기록 관리
+    companies:
+        title: 회사 관리
     contacts:
         index:
             title: 주소록 리스트
