--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -869,6 +869,9 @@ ko:
         show:
             title: 명함 내용 보기
     payments:
+        index:
+            by_all: 전체 보기
+            by_payment: 지급이 있는 사람들만 보기
         new:
             title: 연봉 입력
         yearly:
