--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -319,6 +319,7 @@ ko:
             dayworker:
                 juminno: 주민등록번호
             dayworker_tax:
+                dayworker: 원천징수 대상자
                 reason: 사유
                 apply_day: 지급일자
                 amount: 금액
