--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -871,8 +871,8 @@ ko:
             title: 명함 내용 보기
     payments:
         index:
-            by_all: 전체 보기
-            by_payment: 지급이 있는 사람들만 보기
+            payment_only: 지급이 있는 사람들만 보기
+            with_no_payment: 전체 보기
         new:
             title: 연봉 입력
         yearly:
