--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -627,8 +627,12 @@ ko:
             title: 승인내역 수정하기
         find_empty_cardbills:
             link: 카드영수증이 없는 목록 보기
-        generate_cardbills:
+        generate:
+            title: 신용카드 영수증 생성
             link: 신용카드 영수증 생성
+            owner: 소유자
+            submit: 카드영수증 생성
+            success: "%{owner} 이(가) 총 %{amount}개의 카드영수증을 생성했습니다."
         title: 카드승인내역
     card_used_sources:
         index:
