--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -888,6 +888,8 @@ ko:
             document: 문서관리
             business_client: 거래처관리
             admin: 관리자 메뉴
+            nextweek: 다음주
+            prevweek: 이전주
     namecards:
         edit:
             title: 명함 정보 수정
