--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -278,6 +278,10 @@ ko:
                 leave: 퇴근
             company:
                 name: 업체명
+                registration_number: 사업자 등록번호
+                owner_name: 대표자 성명
+                address: 업체 주소
+                phone_number: 업체 연락처
                 pay_basic_date: 급여 기준일
                 payday: 급여 지급일
             contact:
