--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -109,6 +109,7 @@ ko:
             cardbill: "카드 영수증"
             change_history: 변경사항
             commute: 출퇴근
+            company: 회사
             contact: 주소록
             contact_phone_number: 전화번호
             contact_address: 주소
