--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -500,10 +500,9 @@ ko:
                 name: 계정명
                 password: 비밀번호
                 password_confirmation: 비밀번호 확인
-                gmail_account: Google 계정
+                google_account: Google 계정
                 notify_email: Email
                 boxcar_account: Boxcar 계정
-                google_app_account: GoogleApp 계정
         errors:
             template:
                 header: 오류가 발생했습니다.
