--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -503,6 +503,7 @@ ko:
                 google_account: Google 계정
                 notify_email: Email
                 boxcar_account: Boxcar 계정
+                redmine_account: Redmine 계정
         errors:
             template:
                 header: 오류가 발생했습니다.
@@ -1109,6 +1110,8 @@ ko:
             successfully_changed: 성공적으로 변경하였습니다.
         google:
             create: 구글 앱스 계정 생성
+        redmine:
+            create: 레드마인 계정 생성
         error:
     vacations:
         index:
