should remove google app account #9227

--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -1111,9 +1111,11 @@ ko:
             password_confirm_wrong: 비밀번호와 비밀번호 확인이 일치하지 않습니다.
             successfully_changed: 성공적으로 변경하였습니다.
         google:
-            create: 구글 앱스 계정 생성
+            create: 구글 앱스 계정 생성하기
+            destroy: 제거하기
         redmine:
-            create: 레드마인 계정 생성
+            create: 레드마인 계정 생성하기
+            destroy: 제거하기
         google_apps:
             title: 구글 앱스 계정이 등록된 사용자들
         error:
